@startuml

title __MEMENTO's Class Diagram__\n

  namespace  {
    namespace emento {
      class Memento.CareTaker {
          - currentIndex : int
          - mementos : ArrayList<Memento>
          - numberOfFlashBacks : int
          + CareTaker()
          + goNext()
          + goPrev()
          + openNewAddress()
          + setNumberOfFlashBacks()
      }
    }
  }
  

  namespace  {
    namespace emento {
      class Memento.Memento {
          - state : String
          + Memento()
          + getState()
      }
    }
  }
  

  namespace  {
    namespace emento {
      class Memento.Originator {
          - state : String
          + Originator()
          + restore()
      }
    }
  }
  

  Memento.CareTaker o-- Memento.Originator : originator
  Memento.Originator o-- Controller.Controller : controller
  Memento.Originator o-- Model.Model : model
  Memento.Originator o-- View.View : view


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
